# blemees-peer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: bump-tap.yml  ci.yml  release.yml
docs/: SPEC.md
examples/: python_client.py  shell_client.sh
src/blemees_peer/: __init__.py  _version.py  addressing.py  client.py  connection.py  daemon.py  errors.py  mcp.py  mcp_server.py  messages.py  persistence.py  router.py  server.py
tests/: conftest.py  test_addressing.py  test_mcp.py  test_persistence.py  test_router.py  test_server.py
