[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blemees-peer"
version = "0.1.0"
description = "Peer communication daemon and MCP sidecar for blemees agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "blemees" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
blemees-peerd = "blemees_peer.daemon:main"
blemees-peer-mcp = "blemees_peer.mcp:main"

[project.urls]
Homepage = "https://github.com/blemees/blemees-peer"
Issues = "https://github.com/blemees/blemees-peer/issues"
Spec = "https://github.com/blemees/blemees-peer/blob/main/docs/SPEC.md"

[tool.hatch.build.targets.wheel]
packages = ["src/blemees_peer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PIE", "SIM", "RUF"]
ignore = ["E501"]
